fix: Revert fix icon alignment and move component specific CSS into … (#508)
* Revert "fix: fix icon alignment and move component specific CSS into components (#505)"

This reverts commit 1ec57493b63d8129ac5b7fc6a3849520e099c0e2.

* fix: applying React / Angular specific CSS again

--- a/packages/css/src/less/select.less
+++ b/packages/css/src/less/select.less
@@ -2,13 +2,6 @@
 @import '@transferwise/neptune-css/src/less/variables/_custom-media.less';
 
 .tw-select {
-  .tw-icon {
-    display: inline-block;
-    margin-right: var(--space-8);
-    vertical-align: middle;
-    margin-top: -4px;
-  }
-
   .tw-dropdown-item {
     &--clickable {
       cursor: pointer;
@@ -40,6 +33,31 @@
     position: static;
     display: inline-block;
     margin-right: var(--space-8);
+  }
+
+  // React
+  .tw-icon {
+    display: inline-block;
+    margin-right: var(--space-8);
+    vertical-align: middle;
+    margin-top: -4px;
+  }
+
+  // Angular
+  .tw-select-option-link tw-icon {
+    margin-top: -2px;
+    display: inline-block;
+  }
+
+  .tw-select-selected tw-icon {
+    display: inline-block;
+    vertical-align: middle;
+    height: 24px;
+    margin-top: -4px;
+  }
+
+  .circle .tw-icon {
+    vertical-align: middle;
   }
 }
 
